--- a/bundle/stable/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/stable/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -85,8 +85,8 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Developer Tools
     certified: "false"
-    containerImage: quay.io/eclipse/che-operator@sha256:aa51eb6e035f1cddbe2fe04301e7980fb90031820f9b1dac1641d471fc8a5e00
-    createdAt: "2024-08-14T21:47:21Z"
+    containerImage: quay.io/eclipse/che-operator@sha256:4a00429de53b72e766ca0b1eca1ffe47cf7e48524a349f8582dbfda75219173c
+    createdAt: "2024-08-30T13:50:48Z"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces.
     features.operators.openshift.io/cnf: "false"
@@ -104,7 +104,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.90.0
+  name: eclipse-che.v7.91.0
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -873,19 +873,19 @@ spec:
                       - name: OPERATOR_NAME
                         value: che-operator
                       - name: CHE_VERSION
-                        value: 7.90.0
+                        value: 7.91.0
                       - name: RELATED_IMAGE_che_server
-                        value: quay.io/eclipse/che-server@sha256:444219d424222c0064de545a51f05e4f06ef5f890206eea336f1642efc5fc9ef
+                        value: quay.io/eclipse/che-server@sha256:a7590f9a523f29862263364ca3d22f93547ac54a1e11c2469bf2caf5fa3b688d
                       - name: RELATED_IMAGE_dashboard
-                        value: quay.io/eclipse/che-dashboard@sha256:4b70ab3143d1525d1f94e5ab7d68f405dece313bbdde7385890ce34d1609c79b
+                        value: quay.io/eclipse/che-dashboard@sha256:d08d2218d0bed2108f0e84b7b69c33b79603584c6c48fe62c5f06a73b2b7c5a6
                       - name: RELATED_IMAGE_plugin_registry
-                        value: quay.io/eclipse/che-plugin-registry@sha256:ea684f6c6d9e9b3ae95febfe7d23ccbde8fef5466e9c8557656e38ea8b58f05b
+                        value: quay.io/eclipse/che-plugin-registry@sha256:d0ad1458c2b43a2fcf60b76030b788107de25abeecfb73072cbb293e1dd16aa1
                       - name: RELATED_IMAGE_che_tls_secrets_creation_job
                         value: quay.io/eclipse/che-tls-secret-creator@sha256:54df0ccf598d230e278d512c3b44bdf24edb280f71da32643db46e0120bfaee0
                       - name: RELATED_IMAGE_single_host_gateway
                         value: quay.io/eclipse/che--traefik@sha256:8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-                        value: quay.io/che-incubator/configbump@sha256:d59a8e687c7d448ca4ca9d240f8feef78bb3326e0b72029f193377c9131c24cc
+                        value: quay.io/che-incubator/configbump@sha256:1c1277c0134e3c65ba6d6091345eec3d3fac7353c401e09ea1c9a2165628f793
                       - name: RELATED_IMAGE_gateway_authentication_sidecar
                         value: quay.io/openshift/origin-oauth-proxy@sha256:870bfe92a4663720775c0dfe5728ecbb10a17f0644eef5f57276ec135034c6a1
                       - name: RELATED_IMAGE_gateway_authorization_sidecar
@@ -924,30 +924,30 @@ spec:
                         value: '{"allowPrivilegeEscalation": true,"capabilities":
                           {"add": ["SETGID", "SETUID"]}}'
                       - name: RELATED_IMAGE_editor_definition_che_code_latest_che_code_injector
-                        value: quay.io/che-incubator/che-code@sha256:6f83b0121292537f1858103452b2e4cfecfafa3c5ad50b4307c0abd269b547b4
+                        value: quay.io/che-incubator/che-code@sha256:112ef05a584776e87d4d4ec8c0ca8fa27144789a37e72254e2fccf2cb0cdba1e
                       - name: RELATED_IMAGE_editor_definition_che_code_latest_che_code_runtime_description
-                        value: quay.io/devfile/universal-developer-image@sha256:8065b7ae5f00d2ee984a214e112ce09a513ae06a2a3d58cce11d3eec1137d623
+                        value: quay.io/devfile/universal-developer-image@sha256:1b84280bea96228affa7ecedd7347e6801f6e369bdfa7e40dabfc4fa99f9cad6
                       - name: RELATED_IMAGE_editor_definition_che_idea_next_che_idea_runtime_description
-                        value: quay.io/devfile/universal-developer-image@sha256:8065b7ae5f00d2ee984a214e112ce09a513ae06a2a3d58cce11d3eec1137d623
+                        value: quay.io/devfile/universal-developer-image@sha256:1b84280bea96228affa7ecedd7347e6801f6e369bdfa7e40dabfc4fa99f9cad6
                       - name: RELATED_IMAGE_editor_definition_che_idea_next_che_idea_injector
                         value: quay.io/che-incubator/che-idea:next
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_next_editor_injector
                         value: quay.io/che-incubator/che-idea-dev-server:next
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_next_editor_runtime
-                        value: quay.io/devfile/universal-developer-image@sha256:8065b7ae5f00d2ee984a214e112ce09a513ae06a2a3d58cce11d3eec1137d623
+                        value: quay.io/devfile/universal-developer-image@sha256:1b84280bea96228affa7ecedd7347e6801f6e369bdfa7e40dabfc4fa99f9cad6
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_latest_editor_injector
-                        value: quay.io/che-incubator/che-idea-dev-server:latest
+                        value: quay.io/che-incubator/che-idea-dev-server@sha256:55d433645dec56ea178df03f466623e045fde046e1cb43b37493999bdb9494de
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_latest_editor_runtime
-                        value: quay.io/devfile/universal-developer-image@sha256:8065b7ae5f00d2ee984a214e112ce09a513ae06a2a3d58cce11d3eec1137d623
+                        value: quay.io/devfile/universal-developer-image@sha256:1b84280bea96228affa7ecedd7347e6801f6e369bdfa7e40dabfc4fa99f9cad6
                       - name: RELATED_IMAGE_editor_definition_che_idea_latest_che_idea_runtime_description
-                        value: quay.io/devfile/universal-developer-image@sha256:8065b7ae5f00d2ee984a214e112ce09a513ae06a2a3d58cce11d3eec1137d623
+                        value: quay.io/devfile/universal-developer-image@sha256:1b84280bea96228affa7ecedd7347e6801f6e369bdfa7e40dabfc4fa99f9cad6
                       - name: RELATED_IMAGE_editor_definition_che_idea_latest_che_idea_injector
-                        value: quay.io/che-incubator/che-idea:latest
+                        value: quay.io/che-incubator/che-idea@sha256:8aae69dc4b0c122491a75400639af0fe92b5e214c6e68ac97cda29fb58b44151
                       - name: RELATED_IMAGE_editor_definition_che_code_insiders_che_code_injector
-                        value: quay.io/che-incubator/che-code@sha256:f2af2dd3e98ebb967ff27a2d24f91e8c03b4cafdaf0881a723c0d564633ea1eb
+                        value: quay.io/che-incubator/che-code@sha256:f2ea224318decc946dd2bf63e4f6eb2297c43adafc4a7910301f829bef0e2aa9
                       - name: RELATED_IMAGE_editor_definition_che_code_insiders_che_code_runtime_description
-                        value: quay.io/devfile/universal-developer-image@sha256:8065b7ae5f00d2ee984a214e112ce09a513ae06a2a3d58cce11d3eec1137d623
-                    image: quay.io/eclipse/che-operator@sha256:aa51eb6e035f1cddbe2fe04301e7980fb90031820f9b1dac1641d471fc8a5e00
+                        value: quay.io/devfile/universal-developer-image@sha256:1b84280bea96228affa7ecedd7347e6801f6e369bdfa7e40dabfc4fa99f9cad6
+                    image: quay.io/eclipse/che-operator@sha256:4a00429de53b72e766ca0b1eca1ffe47cf7e48524a349f8582dbfda75219173c
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       failureThreshold: 10
@@ -1059,7 +1059,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.90.0
+  version: 7.91.0
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
@@ -1116,39 +1116,45 @@ spec:
       type: ConversionWebhook
       webhookPath: /convert
   relatedImages:
-    - name: che-operator-7.90.0
-      image: quay.io/eclipse/che-operator@sha256:aa51eb6e035f1cddbe2fe04301e7980fb90031820f9b1dac1641d471fc8a5e00
-      # tag: quay.io/eclipse/che-operator:7.90.0
+    - name: che-operator-7.91.0
+      image: quay.io/eclipse/che-operator@sha256:4a00429de53b72e766ca0b1eca1ffe47cf7e48524a349f8582dbfda75219173c
+      # tag: quay.io/eclipse/che-operator:7.91.0
     - name: kube-rbac-proxy-v0.13.1
       image: quay.io/brancz/kube-rbac-proxy@sha256:738c854322f56d63ebab75de5210abcdd5e0782ce2d30c0ecd4620f63b24694d
       # tag: quay.io/brancz/kube-rbac-proxy:v0.13.1
-    - name: che-code-7.90.0
-      image: quay.io/che-incubator/che-code@sha256:6f83b0121292537f1858103452b2e4cfecfafa3c5ad50b4307c0abd269b547b4
-      # tag: quay.io/che-incubator/che-code:7.90.0
+    - name: che-code-7.91.0
+      image: quay.io/che-incubator/che-code@sha256:112ef05a584776e87d4d4ec8c0ca8fa27144789a37e72254e2fccf2cb0cdba1e
+      # tag: quay.io/che-incubator/che-code:7.91.0
     - name: che-code-insiders
-      image: quay.io/che-incubator/che-code@sha256:f2af2dd3e98ebb967ff27a2d24f91e8c03b4cafdaf0881a723c0d564633ea1eb
+      image: quay.io/che-incubator/che-code@sha256:f2ea224318decc946dd2bf63e4f6eb2297c43adafc4a7910301f829bef0e2aa9
       # tag: quay.io/che-incubator/che-code:insiders
-    - name: configbump-7.90.0
-      image: quay.io/che-incubator/configbump@sha256:d59a8e687c7d448ca4ca9d240f8feef78bb3326e0b72029f193377c9131c24cc
-      # tag: quay.io/che-incubator/configbump:7.90.0
+    - name: che-idea-dev-server-latest
+      image: quay.io/che-incubator/che-idea-dev-server@sha256:55d433645dec56ea178df03f466623e045fde046e1cb43b37493999bdb9494de
+      # tag: quay.io/che-incubator/che-idea-dev-server:latest
+    - name: che-idea-latest
+      image: quay.io/che-incubator/che-idea@sha256:8aae69dc4b0c122491a75400639af0fe92b5e214c6e68ac97cda29fb58b44151
+      # tag: quay.io/che-incubator/che-idea:latest
+    - name: configbump-7.91.0
+      image: quay.io/che-incubator/configbump@sha256:1c1277c0134e3c65ba6d6091345eec3d3fac7353c401e09ea1c9a2165628f793
+      # tag: quay.io/che-incubator/configbump:7.91.0
     - name: header-rewrite-proxy-latest
       image: quay.io/che-incubator/header-rewrite-proxy@sha256:bd7873b8feef35f218f54c6251ea224bea2c8bf202a328230019a0ba2941245d
       # tag: quay.io/che-incubator/header-rewrite-proxy:latest
     - name: universal-developer-image-latest
-      image: quay.io/devfile/universal-developer-image@sha256:8065b7ae5f00d2ee984a214e112ce09a513ae06a2a3d58cce11d3eec1137d623
+      image: quay.io/devfile/universal-developer-image@sha256:1b84280bea96228affa7ecedd7347e6801f6e369bdfa7e40dabfc4fa99f9cad6
       # tag: quay.io/devfile/universal-developer-image:latest
     - name: che--traefik-v2.9.10-8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
       image: quay.io/eclipse/che--traefik@sha256:8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
       # tag: quay.io/eclipse/che--traefik:v2.9.10-8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
-    - name: che-dashboard-7.90.0
-      image: quay.io/eclipse/che-dashboard@sha256:4b70ab3143d1525d1f94e5ab7d68f405dece313bbdde7385890ce34d1609c79b
-      # tag: quay.io/eclipse/che-dashboard:7.90.0
-    - name: che-plugin-registry-7.90.0
-      image: quay.io/eclipse/che-plugin-registry@sha256:ea684f6c6d9e9b3ae95febfe7d23ccbde8fef5466e9c8557656e38ea8b58f05b
-      # tag: quay.io/eclipse/che-plugin-registry:7.90.0
-    - name: che-server-7.90.0
-      image: quay.io/eclipse/che-server@sha256:444219d424222c0064de545a51f05e4f06ef5f890206eea336f1642efc5fc9ef
-      # tag: quay.io/eclipse/che-server:7.90.0
+    - name: che-dashboard-7.91.0
+      image: quay.io/eclipse/che-dashboard@sha256:d08d2218d0bed2108f0e84b7b69c33b79603584c6c48fe62c5f06a73b2b7c5a6
+      # tag: quay.io/eclipse/che-dashboard:7.91.0
+    - name: che-plugin-registry-7.91.0
+      image: quay.io/eclipse/che-plugin-registry@sha256:d0ad1458c2b43a2fcf60b76030b788107de25abeecfb73072cbb293e1dd16aa1
+      # tag: quay.io/eclipse/che-plugin-registry:7.91.0
+    - name: che-server-7.91.0
+      image: quay.io/eclipse/che-server@sha256:a7590f9a523f29862263364ca3d22f93547ac54a1e11c2469bf2caf5fa3b688d
+      # tag: quay.io/eclipse/che-server:7.91.0
     - name: che-tls-secret-creator-alpine-01a4c34
       image: quay.io/eclipse/che-tls-secret-creator@sha256:54df0ccf598d230e278d512c3b44bdf24edb280f71da32643db46e0120bfaee0
       # tag: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
