--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7287,6 +7287,10 @@ spec:
                               type: object
                           type: object
                       type: object
+                    runtimeClassName:
+                      description: RuntimeClassName specifies the spec.runtimeClassName
+                        for workspace pods.
+                      type: string
                     secondsOfInactivityBeforeIdling:
                       default: 1800
                       description: |-
