--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -7239,6 +7239,10 @@ spec:
                             type: object
                         type: object
                     type: object
+                  runtimeClassName:
+                    description: RuntimeClassName specifies the spec.runtimeClassName
+                      for workspace pods.
+                    type: string
                   secondsOfInactivityBeforeIdling:
                     default: 1800
                     description: |-
