--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -7255,6 +7255,10 @@ spec:
                             type: object
                         type: object
                     type: object
+                  runtimeClassName:
+                    description: RuntimeClassName specifies the spec.runtimeClassName
+                      for workspace pods.
+                    type: string
                   secondsOfInactivityBeforeIdling:
                     default: 1800
                     description: |-
