--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7025,6 +7025,8 @@ spec:
                           type: object
                       type: object
                     ignoredUnrecoverableEvents:
+                      default:
+                        - FailedScheduling
                       description: |-
                         IgnoredUnrecoverableEvents defines a list of Kubernetes event names that should
                         be ignored when deciding to fail a workspace that is starting. This option should be used
