--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -6999,6 +6999,8 @@ spec:
                         type: object
                     type: object
                   ignoredUnrecoverableEvents:
+                    default:
+                    - FailedScheduling
                     description: |-
                       IgnoredUnrecoverableEvents defines a list of Kubernetes event names that should
                       be ignored when deciding to fail a workspace that is starting. This option should be used
